# MGR

./: CMakeLists.txt  README.md  camera.h  color.h  interval.h  main.cpp  material.h  objects.h  ray.h  rayUtilities.h  settings.h  utilities.h  vec3.h
